--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <body>
     <header class="header">
-      <h1 id="main-headline">Welcome To Talk Like Minions</h1>
+      <h1 id="main-headline">Can you talk like Minions</h1>
 
     </header>
     
